# Abyssum

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  TODO.md  install.sh
.github/workflows/: release.yml
abyssum-cli/: Cargo.toml
abyssum-cli/src/: cli.rs  config_overlay.rs  lib.rs  main.rs  render.rs  report.rs  run.rs  validate.rs
abyssum-cli/tests/: e2e.rs  exit_codes.rs  report_cmd.rs  smoke.rs
abyssum-cli/tests/common/: mod.rs
abyssum-core/: Cargo.toml
abyssum-core/migrations/: 0001_init.sql  0001_initial_schema.sql  0002_seed_data.sql  0003_auth.sql  0004_annotations.sql
abyssum-core/src/: ai.rs  config.rs  error.rs  lib.rs  logging.rs  rate_limit.rs  rate_limiter.rs  report.rs
abyssum-core/src/annotations/: mod.rs
abyssum-core/src/auth/: mod.rs
abyssum-core/src/custom_request/: analysis.rs  mod.rs  output.rs  response.rs  spec.rs
abyssum-core/src/persistence/: db.rs  mod.rs  records.rs
abyssum-core/src/scan/: context.rs  finding.rs  mod.rs  orchestrator.rs  progress.rs  registry.rs  scanner.rs  session.rs  target.rs
abyssum-core/src/seed/: assets.rs  mod.rs  store.rs  user_agent.rs
abyssum-core/tests/: ai.rs  annotations.rs  auth.rs  custom_request.rs  orchestration.rs  persistence.rs  report.rs  seed_data.rs
abyssum-scanners/: Cargo.toml
abyssum-scanners/src/: bac.rs  cors.rs  graphql.rs  idor.rs  lib.rs  openapi_discovery.rs  rest_discovery.rs  wordlist.rs
abyssum-scanners/tests/: bac.rs  cors.rs  graphql.rs  idor.rs  openapi_discovery.rs  rest_discovery.rs  rest_discovery_integration.rs
abyssum-web/: Cargo.toml
abyssum-web/src/: auth.rs  handlers.rs  lib.rs  main.rs  state.rs  view.rs  ws.rs
abyssum-web/static/: app.css  app.js
abyssum-web/tests/: smoke.rs  web.rs
abyssum-web/tests/common/: mod.rs
assets/seed/: user-agents.json
assets/seed/wordlists/: api_bases.txt  endpoints.txt  graphql_queries.txt  openapi_paths.txt  paths.txt  paths_graphql.txt  paths_short.txt  subdomains.txt
issues/tests-dynamic-soft-404-suppression-by-body-length/: issue.md  tasks.md
issues/tests-error-paths-in-persistence-row-decoding/: issue.md  tasks.md
issues/tests-like-metacharacter-escaping-in-finding-search/: issue.md  tasks.md
issues/tests-log-level-env-var-fallback-and-precedence/: issue.md  tasks.md
issues/tests-malformed-delay-config-in-rate-limiter/: issue.md  tasks.md
openspec/: future-capabilities.md  project.md
openspec/changes/: IMPLEMENTATION_ORDER.md
openspec/changes/a00-bootstrap-rust-workspace/: design.md  tasks.md
openspec/changes/a01-add-rate-limiting/: design.md  proposal.md  tasks.md
openspec/changes/a02-add-scan-orchestration/: design.md  proposal.md  tasks.md
openspec/changes/a03-add-result-persistence/: proposal.md  tasks.md
openspec/changes/a04-add-seed-data/: design.md  tasks.md
openspec/changes/add-ai-assist/: design.md  proposal.md  tasks.md
openspec/changes/add-annotations/: design.md  tasks.md
openspec/changes/add-authentication/: design.md  proposal.md  tasks.md
openspec/changes/add-bac-scanner/: design.md
openspec/changes/add-cli/: design.md  proposal.md  tasks.md
openspec/changes/add-cors-scanner/: design.md  proposal.md
openspec/changes/add-custom-requests-tool/: design.md  proposal.md
openspec/changes/add-distribution/: proposal.md  tasks.md
openspec/changes/add-graphql-scanner/: design.md
openspec/changes/add-idor-scanner/: design.md  proposal.md
openspec/changes/add-openapi-discovery-scanner/: design.md  proposal.md  tasks.md
openspec/changes/add-rate-limiting/: proposal.md
openspec/changes/add-report-generation/: design.md  tasks.md
openspec/changes/add-rest-discovery-scanner/: design.md  proposal.md
openspec/changes/add-result-persistence/: design.md  proposal.md  tasks.md
openspec/changes/add-scan-orchestration/: design.md  proposal.md  tasks.md
openspec/changes/add-seed-data/: design.md  proposal.md  tasks.md
openspec/changes/add-web-interface/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-20-a00-bootstrap-rust-workspace/: tasks.md
openspec/changes/archive/2026-06-20-a03-add-result-persistence/: design.md
openspec/changes/archive/2026-06-20-b00-add-rest-discovery-scanner/: tasks.md
openspec/changes/b00-add-rest-discovery-scanner/: design.md  proposal.md  tasks.md
openspec/changes/b01-add-openapi-discovery-scanner/: design.md
openspec/changes/b02-add-cors-scanner/: design.md  tasks.md
openspec/changes/b03-add-bac-scanner/: design.md  proposal.md  tasks.md
openspec/changes/b04-add-idor-scanner/: design.md  tasks.md
openspec/changes/b05-add-graphql-scanner/: design.md  tasks.md
openspec/changes/bootstrap-rust-workspace/: design.md  proposal.md  tasks.md
openspec/changes/c00-add-custom-requests-tool/: design.md  proposal.md  tasks.md
openspec/changes/c01-add-cli/: proposal.md  tasks.md
openspec/changes/c02-add-authentication/: design.md  proposal.md  tasks.md
openspec/changes/c03-add-web-interface/: tasks.md
openspec/changes/d00-add-annotations/: proposal.md  tasks.md
openspec/changes/d01-add-report-generation/: design.md  tasks.md
openspec/changes/d02-add-ai-assist/: design.md  proposal.md  tasks.md
openspec/changes/d03-add-distribution/: design.md  tasks.md
openspec/issues/: bump-rust-edition-2024.md
openspec/specs/ai-assist/: spec.md
openspec/specs/annotations/: spec.md
openspec/specs/authentication/: spec.md
openspec/specs/bac-scan/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/cors-scan/: spec.md
openspec/specs/custom-requests/: spec.md
openspec/specs/distribution/: spec.md
openspec/specs/graphql-scan/: spec.md
openspec/specs/idor-scan/: spec.md
openspec/specs/openapi-discovery/: spec.md
openspec/specs/rate-limiting/: spec.md
openspec/specs/report-generation/: spec.md
openspec/specs/rest-discovery/: spec.md
openspec/specs/result-persistence/: spec.md
openspec/specs/scan-orchestration/: spec.md
openspec/specs/seed-data/: spec.md
openspec/specs/web-ui/: spec.md
tests/: install.test.sh
(+69 files in other folders)
