[workspace]
resolver = "2"
members = [
    "abyssum-core",
    "abyssum-scanners",
    "abyssum-web",
    "abyssum-cli",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/IndustriousKraken/Abyssum"
authors = ["Abyssum contributors"]

[workspace.dependencies]
# Internal crates
abyssum-core = { path = "abyssum-core" }
abyssum-scanners = { path = "abyssum-scanners" }

# Shared third-party dependencies (see openspec/changes/a00 design.md for the locked stack).
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
# Async runtime — declared centrally for the surfaces that need it as they grow
# (orchestration/server land in later changes). Members opt in via `workspace = true`.
tokio = { version = "1", features = ["full"] }
# Cancellation primitive for scan sessions — the orchestrator holds the source and
# hands a child token to every scan context (see add-scan-orchestration design).
tokio-util = "0.7"
# Object-safe async trait for the `BaseScanner` contract.
async-trait = "0.1"
# HTTP client — owned by the engine and reached only through `ScanContext::send`,
# so the pacing floor can never be bypassed. rustls (no system OpenSSL dependency).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Stable session identifiers.
uuid = { version = "1", features = ["v4", "serde"] }
# Target URLs — origin + path modelling and per-domain host derivation.
url = { version = "2", features = ["serde"] }
# Finding timestamps.
chrono = { version = "0.4", features = ["serde"] }
# Structured finding evidence.
serde_json = "1"
# Randomness — the rate limiter draws a fresh uniform pacing delay per request
# (anti-fingerprinting; see a01-add-rate-limiting design.md).
rand = "0.8"
# Durable result storage — async SQLite via sqlx (see a03-add-result-persistence
# design.md). `sqlite` bundles the SQLite amalgamation (no system libsqlite3
# required); `macros` + `migrate` provide the compile-time-embedded migration set
# applied idempotently on startup; `chrono` lets session/finding timestamps bind
# and decode directly. `runtime-tokio` shares the engine's Tokio runtime; no TLS
# feature is enabled because the store is a local file.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

# Dev-only helpers
tempfile = "3"
