[package]
name = "abyssum-core"
description = "Cross-cutting foundations for Abyssum: configuration, error model, logging."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Async runtime: the rate limiter sleeps and locks per-domain state on Tokio.
tokio = { workspace = true }
# Cancellation token shared from the orchestrator into each scan context.
tokio-util = { workspace = true }
# Object-safe async `BaseScanner` trait.
async-trait = { workspace = true }
# Engine-owned HTTP client behind `ScanContext::send`.
reqwest = { workspace = true }
# Session identifiers, target URLs, and finding timestamps.
uuid = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
# Fresh uniform draw for each paced request's base delay.
rand = { workspace = true }
# Durable result storage: scan sessions and findings in an embedded SQLite file,
# accessed async through the shared Tokio runtime. Migrations are embedded.
sqlx = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `test-util` unlocks the paused/virtual clock (`start_paused`) so the pacing
# tests are deterministic and instant — no real sleeping, no network.
tokio = { workspace = true, features = ["test-util"] }
# The orchestration integration tests implement a stub `BaseScanner`.
async-trait = { workspace = true }
serde_json = { workspace = true }
# The persistence integration tests construct sessions/findings (uuids, fixed
# timestamps) and probe the migration tracking table directly.
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
