[package]
name = "abyssum-core"
description = "Cross-cutting foundations for Abyssum: configuration, error model, logging."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `test-util` unlocks the paused/virtual clock so pacing tests are deterministic
# and issue no real sleeps (see a01 tasks 4.6).
tokio = { workspace = true, features = ["test-util"] }
