[package]
name = "abyssum-core"
description = "Cross-cutting foundations for Abyssum: configuration, error model, logging."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
# Cancellation token shared from the orchestrator into each scan context.
tokio-util = { workspace = true }
# Object-safe async `BaseScanner` trait.
async-trait = { workspace = true }
# Engine-owned HTTP client behind `ScanContext::send`.
reqwest = { workspace = true }
# Session identifiers, target URLs, and finding timestamps.
uuid = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
# Durable result storage: async SQLite pool, embedded migrations, and direct
# chrono timestamp binding (see persistence module + a03 design.md).
sqlx = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `test-util` unlocks the paused/virtual clock so pacing tests are deterministic
# and issue no real sleeps (see a01 tasks 4.6).
tokio = { workspace = true, features = ["test-util"] }
# The orchestration integration tests implement a stub `BaseScanner`.
async-trait = { workspace = true }
serde_json = { workspace = true }
# Persistence integration tests build findings/sessions with explicit timestamps
# (date-range filter coverage) and read them back through the public API.
chrono = { workspace = true }
